<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/SigninText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/Signin"
        android:textAllCaps="true"
        android:textColor="@color/md_theme_light_secondary"
        android:textSize="35dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SigninText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/first_name"
        android:padding="5dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:textColor="@color/md_theme_light_primary"
            android:inputType="text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameField"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/last_name"
        android:padding="5dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:textColor="@color/md_theme_light_primary"
            android:inputType="text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/identificationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastNameField"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/identification"
        android:padding="5dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/identificationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_app_registration_24"
            android:drawablePadding="20dp"
            android:textColor="@color/md_theme_light_primary"
            android:inputType="number"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/identificationField"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:padding="5dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailField"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:padding="5dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:inputType="textPassword"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        android:text="@string/Signin"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signinButton"
        android:text="@string/Login"
        android:onClick="onClick"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_primary"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>