<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_width="290dp"
        android:layout_height="290dp"
        android:layout_below="@id/AppName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/vector_2" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/md_theme_light_secondary"
        android:textSize="35dp"
        android:textAllCaps="true"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/BotonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BotonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BotonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        android:text="@string/Signin"
        android:textAllCaps="true"
        android:textStyle="bold" />

</RelativeLayout>