<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_width="290dp"
        android:layout_height="172dp"
        android:layout_below="@id/login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="142dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/vector_2" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/md_theme_light_secondary"
        android:textSize="35dp"
        android:textAllCaps="true"
        android:layout_margin="50dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:textColorHint="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailField"
        android:hint="@string/password"
        android:textColorHint="@color/md_theme_light_primary"
        android:layout_margin="10dp"
        android:padding="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClick"
        android:layout_marginBottom="20dp"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SigninText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:text="@string/Signin"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_primary"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        />

</RelativeLayout>